objects/Quality_Case__c.object
<CustomObject>
    <fields>
        <fullName>CS_Potential_Quality_Offense__c</fullName>
        <label>CS Potential Quality Offense</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing: Assumptive Prepay</fullName>
                </value>
                <value>
                    <fullName>Leads: Calls/Jobs</fullName>
                </value>
                <value>
                    <fullName>Leads: Guaranteed Lead Range</fullName>
                </value>
                <value>
                    <fullName>Address: Business Address Not Used</fullName>
                </value>
                <value>
                    <fullName>Address: PO Box</fullName>
                </value>
                <value>
                    <fullName>Address: Target Metro Beyond 20 Miles</fullName>
                </value>
                <value>
                    <fullName>Billing: Change Mind POS</fullName>
                </value>
                <value>
                    <fullName>Billing: Contract Length</fullName>
                </value>
                <value>
                    <fullName>Billing: Invoice/Call/Automatic Billing</fullName>
                </value>
                <value>
                    <fullName>Billing: Payment Dates</fullName>
                </value>
                <value>
                    <fullName>Billing: Refund Discussion</fullName>
                </value>
                <value>
                    <fullName>Disciplinary: PCI</fullName>
                </value>
                <value>
                    <fullName>Disciplinary: ROE Breach</fullName>
                </value>
                <value>
                    <fullName>Disciplinary: Unauthorized Charge</fullName>
                </value>
                <value>
                    <fullName>Disciplinary Offense</fullName>
                </value>
                <value>
                    <fullName>Disciplinary - Professionalism</fullName>
                </value>
                <value>
                    <fullName>Leads: Jobs vs. Calls/Emails</fullName>
                </value>
                <value>
                    <fullName>Leads: Non PSG Focus</fullName>
                </value>
                <value>
                    <fullName>Leads: Not Advertised for Segment</fullName>
                </value>
                <value>
                    <fullName>Misc: AA Breach</fullName>
                </value>
                <value>
                    <fullName>Misc: Product Misrepresentation</fullName>
                </value>
                <value>
                    <fullName>Other Offenses: Program Release</fullName>
                </value>
                <value>
                    <fullName>Placement: Rank Outside of Target Metro</fullName>
                </value>
                <value>
                    <fullName>Placement: Specific Keywords</fullName>
                </value>
                <value>
                    <fullName>Placement: Specific Placement</fullName>
                </value>
                <value>
                    <fullName>Timeline: Launch Timeframe</fullName>
                </value>
                <value>
                    <fullName>Timeline: Organic Placement</fullName>
                </value>
                <value>
                    <fullName>Website: Current SEO – No Impact</fullName>
                </value>
                <value>
                    <fullName>Website: SEO on Client's Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closing_Script_Call_Recorded__c</fullName>
        <label>Closing Script Call Recorded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fail_Reason__c</fullName>
        <description>For Closing Script - Auto Close Case</description>
        <label>Fail Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closing script not recorded in full</fullName>
                </value>
                <value>
                    <fullName>CSC incorrectly scheduled</fullName>
                </value>
                <value>
                    <fullName>Incorrect billing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Closing script not read in full</fullName>
                </value>
                <value>
                    <fullName>Install incorrectly scheduled</fullName>
                </value>
                <value>
                    <fullName>Install phone number incorrect</fullName>
                </value>
                <value>
                    <fullName>Info Mismatch</fullName>
                </value>
                <value>
                    <fullName>Questionnaire not emailed to Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fine_Amount__c</fullName>
        <description>For Closing Script - Auto Close Case</description>
        <label>Fine Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$20.00</fullName>
                </value>
                <value>
                    <fullName>$30.00</fullName>
                </value>
                <value>
                    <fullName>$40.00</fullName>
                </value>
                <value>
                    <fullName>$50.00</fullName>
                </value>
                <value>
                    <fullName>$0.00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kickback__c</fullName>
        <label>Kickback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_Emailed_QA__c</fullName>
        <description>For Closing Script - Auto Launch Case</description>
        <label>Rep Emailed QA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recording Issue</fullName>
                </value>
                <value>
                    <fullName>Multiple Calls</fullName>
                </value>
                <value>
                    <fullName>Not Reading the Entire Script Verbatim</fullName>
                </value>
                <value>
                    <fullName>Reading Incorrect Sections</fullName>
                </value>
                <value>
                    <fullName>Contact Info</fullName>
                </value>
                <value>
                    <fullName>Pricing/Billing</fullName>
                </value>
                <value>
                    <fullName>Commitment Length</fullName>
                </value>
                <value>
                    <fullName>E-Contract</fullName>
                </value>
                <value>
                    <fullName>Target Metro</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
                <value>
                    <fullName>Segment</fullName>
                </value>
                <value>
                    <fullName>Launch Date</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reactivation</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Business Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <description>For Closing Script - Auto Close Case
 These fields are utilized to notate discrepancies (and their call timestamps) between the closing script questionnaire and audio recording of the closing script providing the fulfillment/cs teams with insight on the sale.</description>
        <inlineHelpText>These fields are utilized to notate discrepancies (and their call timestamps) between the closing script questionnaire and audio recording of the closing script providing the fulfillment/cs teams with insight on the sale.</inlineHelpText>
        <label>Additional Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fail_Timestamp__c</fullName>
        <description>For Closing Script - Auto Close Case</description>
        <label>Fail Timestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Product_Type__c</fullName>
        <label>QA Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>Ads Only</fullName>
                </value>
                <value>
                    <fullName>Yodle Organic</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>Yodle Medical</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Essentials</fullName>
                </value>
                <value>
                    <fullName>Essentials Only</fullName>
                </value>
                <value>
                    <fullName>Essentials Only (Down-sell)</fullName>
                </value>
                <value>
                    <fullName>Lighthouse - Dental</fullName>
                </value>
                <value>
                    <fullName>Lighthouse - Vision</fullName>
                </value>
                <value>
                    <fullName>Lighthouse - Chiro</fullName>
                </value>
                <value>
                    <fullName>Lighthouse - Auto</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Essentials - Chiro</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Essentials - Auto</fullName>
                </value>
                <value>
                    <fullName>TORCHx for Agent</fullName>
                </value>
                <value>
                    <fullName>TORCHx + Ads for Agent</fullName>
                </value>
                <value>
                    <fullName>TORCHx for Team</fullName>
                </value>
                <value>
                    <fullName>TORCHx + Ads for Team</fullName>
                </value>
                <value>
                    <fullName>TORCHx for Broker</fullName>
                </value>
                <value>
                    <fullName>TORCHx + Ads for Broker</fullName>
                </value>
                <value>
                    <fullName>Lead Stream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Ticket_ID__c</fullName>
        <description>Ticket ID for this case in an External Ticketing System</description>
        <inlineHelpText>Ticket ID for this case in an External Ticketing System</inlineHelpText>
        <label>External Ticket ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Ticket_System__c</fullName>
        <description>Relationship was created between Salesforce and this external ticketing system</description>
        <inlineHelpText>Relationship was created between Salesforce and this external ticketing system</inlineHelpText>
        <label>External Ticket System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_to_CTS_Sync_Enabled__c</fullName>
        <formula>CreatedBy.SFDC_to_CTS_Sync_Enabled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC to CTS Sync Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Quality Case</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Quality Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Case</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Name__c</columns>
        <columns>Client_ID_del__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Local_Quality_Cases_All</fullName>
        <columns>NAME</columns>
        <columns>Case_Age__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Subject__c</columns>
        <columns>QA_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Quality_Case__c.Local_Master_Quality</value>
        </filters>
        <label>Local Quality Cases - All</label>
    </listViews>
    <listViews>
        <fullName>QualityTeam295311_Quality_Case_Open</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>QA_Type__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Quality Team - Open</label>
        <queue>QualityTeam295311</queue>
    </listViews>
    <listViews>
        <fullName>Quality_Closing_Scripts_Quality_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Quality Closing Scripts</label>
        <queue>Quality_Closing_Scripts</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Acquisio_Master_Quality</fullName>
        <active>true</active>
        <description>Record Type used for Acquisio client issues</description>
        <label>Acquisio Master Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closing_Script_Auto_Launch</fullName>
        <active>true</active>
        <description>QA Closing Script Cases</description>
        <label>Closing Script - Auto Launch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lighthouse_Master_Quality</fullName>
        <active>true</active>
        <label>Lighthouse Master Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Master_Quality</fullName>
        <active>true</active>
        <label>Local Master Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>TORCHx_Master_Quality</fullName>
        <active>true</active>
        <label>TORCHx Master Quality</label>
    </recordTypes>
</CustomObject>